create design for login and signup screen

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorPrimary"
+    android:orientation="horizontal"
+    android:gravity="center"
     tools:context=".Activity.SplashActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.example.pdfeditormadtpeeps.CustomWidgets.ExtraBoldTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PDF "
+        android:textColor="@color/colorAccent"
+        android:textSize="35sp"/>
+
+    <com.example.pdfeditormadtpeeps.CustomWidgets.ThinTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Editor"
+        android:textColor="@color/colorWhite"
+        android:textSize="35sp"/>
+
+</androidx.appcompat.widget.LinearLayoutCompat>
