add layout files for custom listview

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,6 +106,7 @@
                             android:text="LogIn"
                             android:textAllCaps="false"
                             android:id="@+id/btn_login"
+                            android:textColor="@color/colorWhite"
                             android:background="@drawable/et_rounded"/>
 
                         <LinearLayout
