--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -118,6 +118,7 @@
                 android:layout_marginEnd="82dp"
                 android:text="Sign Up"
                 android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
                 android:id="@+id/btn_register"
                 android:background="@drawable/et_rounded"/>
 
