--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,17 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PDFEditorMADTPEEPS" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.PDFEditorMADTPEEPS" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
-        <item name="colorOnPrimary">@color/colorWhite</item>
-        <item name="colorAccent">@color/colorAccent</item>
+       <item name="colorAccent">@color/colorAccent</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/colorAccent</item>
-        <item name="colorSecondaryVariant">@color/colorAccent</item>
-        <item name="colorOnSecondary">@color/colorWhite</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+       !-- Status bar color. -->
         <!-- Customize your theme here. -->
     </style>
 </resources>
