--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -132,13 +132,13 @@
                 android:src="@drawable/group_16853"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </com.google.android.material.appbar.AppBarLayout>
-    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
         android:layout_below= "@id/appbar"
         android:id="@+id/frameLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
 
@@ -153,6 +153,35 @@
                 android:layout_marginBottom="10dp"
                 android:visibility="gone"
                 />
+
+            <LinearLayout
+                android:id="@+id/llEmptyBox"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:visibility="visible"
+               >
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    app:srcCompat="@drawable/ic_empty_todolist" />
+
+                <com.example.pdfeditormadtpeeps.CustomWidgets.ThinTextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:text="No Files Added!"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
+                    android:textColor="@color/colorWhite" />
+
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/llEmptyBox"
@@ -186,6 +215,7 @@
             <include
                 layout="@layout/bottom_selection_layout"
                 android:visibility="gone"
+                android:layout_weight="0"
                 /></LinearLayout>
     </FrameLayout>
 
