--- a/app/src/main/res/layout/activity_rearrange_pdf_pages.xml
+++ b/app/src/main/res/layout/activity_rearrange_pdf_pages.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
+        android:background="@color/colorPrimary"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.AppCompatImageView
