--- a/app/src/main/res/layout/pdf_preview_item.xml
+++ b/app/src/main/res/layout/pdf_preview_item.xml
@@ -33,7 +33,7 @@
         android:layout_margin="15dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:background="@drawable/redo_img" />
+        android:background="@drawable/imageedit_5_6090926506" />
 
     <ImageView
         android:id="@+id/img_Undo"
@@ -47,7 +47,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
         android:layout_toLeftOf="@id/img_Redo"
-        android:background="@drawable/undo_img"
+        android:background="@drawable/undo"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         tools:ignore="UnknownId" />
