--- a/app/src/main/res/layout/bottom_more_layout.xml
+++ b/app/src/main/res/layout/bottom_more_layout.xml
@@ -239,6 +239,7 @@
                 android:text="Password"
                 android:textColor="@color/colorWhite"
                 android:layout_marginTop="5dp"
+                android:id="@+id/tv_pwd"
                 android:layout_gravity="center"
                 android:textSize="14sp"/>
 
